# sialabs-local-rag

./: .env.example  .gitignore  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/sialabs_local_rag/: api.py  parsing.py  prompting.py  providers.py  schemas.py  service.py  settings.py  storage.py
backend/tests/: test_api.py  test_storage.py
docs/: API.md  ARCHITECTURE.md  DEMO.md  E2E_OLLAMA_RAG_FLOW.md  GEMMA4_OLLAMA_VALIDATION.md  INSTALLERS.md  LOCAL_AI.md  LOCAL_SETUP.md  OLLAMA_SMOKE_TEST.md  REAL_OLLAMA_VALIDATION.md  RECRUITER_EVIDENCE.md  ROADMAP.md  SECURITY_PRIVACY.md  TESTING.md  VALIDATION.md
examples/: sialabs-demo-context.md
frontend/: index.html
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  LauncherPanel.tsx  api.ts  launcherApi.ts  main.tsx  pwa.ts  styles.css  types.ts  workspace.css
installer/windows/: README.md
launcher/: README.md  local_launcher.py
scripts/: check-ollama.ps1  create-desktop-shortcut.ps1  install-windows-app.ps1  release-preflight.ps1  seed-demo.ps1  start-launcher.ps1  start-local-app.ps1
